// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SummaryCardContainer /> renders snapshot correctly 1`] = `
<div>
  <div
    class="MuiPaper-root SummaryCard-root-1 MuiPaper-elevation0"
  >
    <div
      class="SummaryCard-header-2"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
        style="width: 100px; height: 27px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
        style="width: 60px; height: 27px;"
      />
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="SummaryCardValues-root-42 upTrend"
    >
      <div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
          style="width: 110px; height: 37px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rect SummaryCardValues-totalLabel-43 MuiSkeleton-pulse"
          style="width: 90px; height: 14px;"
        />
      </div>
      <div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
          style="width: 50px; height: 16px;"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter"
  >
    <div
      class="MuiPaper-root MuiSnackbarContent-root ErrorNotification-error-49 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="ErrorNotification-message-46"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root ErrorNotification-icon-47 ErrorNotification-iconVariant-48"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          invalid json response body at undefined reason: Unexpected end of JSON input
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root ErrorNotification-icon-47"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SummaryCardContainer /> renders snapshot correctly on error state 1`] = `
<div>
  <div
    class="MuiPaper-root SummaryCard-root-99 MuiPaper-elevation0"
  >
    <div
      class="SummaryCard-header-100"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
        style="width: 100px; height: 27px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
        style="width: 60px; height: 27px;"
      />
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="SummaryCardValues-root-140 upTrend"
    >
      <div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
          style="width: 110px; height: 37px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rect SummaryCardValues-totalLabel-141 MuiSkeleton-pulse"
          style="width: 90px; height: 14px;"
        />
      </div>
      <div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
          style="width: 50px; height: 16px;"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter"
  >
    <div
      class="MuiPaper-root MuiSnackbarContent-root ErrorNotification-error-147 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="ErrorNotification-message-144"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root ErrorNotification-icon-145 ErrorNotification-iconVariant-146"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          invalid json response body at undefined reason: Unexpected end of JSON input
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root ErrorNotification-icon-145"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
